--- a/frontend/backoffice/package.json
+++ b/frontend/backoffice/package.json
@@ -20,10 +20,10 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lodash": "^4.17.21",
-    "next": "15.4.7",
+    "next": "^15.5.9",
     "prop-types": "^15.8.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.1.2",
+    "react-dom": "19.1.2",
     "react-dropzone": "^14.3.8",
     "react-quill-new": "^3.6.0"
   },
@@ -31,7 +31,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.4.7",
+    "eslint-config-next": "^15.5.9",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "typescript": "^5.9.2"
